[tool.poetry]
name = "ian_segmentation"
version = "0.1.0"
description = ""
authors = [
    "MaiSon WonSeok Jang <npjws3690@gmail.com>", 
    "Yeo-Reum Lee <leeyeoreum01@gmail.com>", 
    "Kyung-Su Kang <unerue@me.com>"
]
readme = "README.md"
packages = [{include = "ian_segmentation"}]

repository = "https://github.com/hvy1seok/IAN-segmentation"

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl"}
pytorch-lightning = "^2.0.4"
torchio = "^0.18.92"
PyYAML = "^6.0"
pandas = "^2.0.3"
matplotlib = "^3.7.1"
opencv-python = "^4.8.0.74"
scikit-learn = "^1.3.0"
wandb = "^0.15.4"
rich = "^13.4.2"
tqdm = "^4.65.0"
scikit-image = "^0.21.0"
munch = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.1"
ipython = "^8.14.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu117"
# priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
